# packwisely-patcher

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: tauri.yml
src/: main.ts  styles.css  tabs.ts  util.ts
src-tauri/: Cargo.toml  main.wxs  msi-main.wxs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: file_util.rs  install.rs  lib.rs  main.rs  wine_util.rs
src/styles/: logo.css  logo.theme.css  main.css  main.theme.css  tabs.css  tabs.theme.css
