[package]
name = "packwisely-patcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["TechPizza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "packwisely_patcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    "objc-exception",
    "wry",
    "common-controls-v6",
] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.12", features = ["base64"] }
tokio = { version = "1", features = ["io-std", "net"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
futures = "0.3"
#rfd = { version = "0.15", default-features = false, features = ["tokio"] }

fast_rsync = { path = "../submodules/rsync-rs" }
async-compression = { version = "0.4", default-features = false, features = [
    "zstd",
    "futures-io",
] }
async-tar = "0.5"
async-compat = "0.2"
async-stream = "0.3"
semver = "1"